<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="3dp"
    android:paddingTop="3dp"
    android:paddingRight="3dp"
    android:paddingBottom="3dp"
    tools:context=".SentencesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ff_sentence_name_text"
            android:textSize="24sp" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameTextView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg">

                <Button
                    android:id="@+id/birthdaySongButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView12"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_background_0"
                    android:minHeight="48dp"
                    android:text="@string/ff_birthdaySong_string"
                    android:textColor="@color/cell_text_color_2_4"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/sentenceTextView0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_0"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_0"
                    android:textColor="@color/cell_text_color_2_4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_0"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_6"
                    android:textColor="@color/cell_text_color_2_4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_0"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_2"
                    android:textColor="@color/cell_text_color_2_4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView3"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_0"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_4"
                    android:textColor="@color/cell_text_color_2_4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView9"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_3"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_10"
                    android:textColor="@color/cell_text_color_other"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_1"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_5"
                    android:textColor="@color/cell_text_color_2_4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_2"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_3"
                    android:textColor="@color/cell_text_color_other"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_1"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_1"
                    android:textColor="@color/cell_text_color_2_4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView8"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_1"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_9"
                    android:textColor="@color/cell_text_color_2_4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView10"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_2"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_11"
                    android:textColor="@color/cell_text_color_other"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView11"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_2"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_12"
                    android:textColor="@color/cell_text_color_other"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView12"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_background_1"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_13"
                    android:textColor="@color/button_bg"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView7"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_0"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_8"
                    android:textColor="@color/cell_text_color_2_4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sentenceTextView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sentenceTextView6"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/text_background_2"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ff_sentence_text_7"
                    android:textColor="@color/cell_text_color_other"
                    android:textSize="20sp" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>